# boilerplate-rust

./: .clippy.toml  .editorconfig  .gitignore  .octocov.yml  .tagpr  .tagpr-version-bump.sh  .worktreeinclude  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.md  build.rs  deny.toml  justfile  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.claude/skills/coding/: SKILL.md
.claude/skills/coding/prompts/: write-tests.md
.claude/skills/jaeger-trace/: SKILL.md
.claude/skills/project-conventions/: SKILL.md
.claude/skills/project-conventions/references/: module-and-project-structure.md  testing-patterns.md
.claude/skills/review/references/: code-checklist.md
.devcontainer/: devcontainer.json  initializeCommand.sh  jaeger-config.yaml  o2-env.sh  postStartCommand.sh  traefik.sh
.githooks/: post-checkout
.github/: project-config.json  release.yml  tagpr-template.md
.github/actions/act-audit/: action.yaml
.github/actions/act-prebuild-container/: action.yaml
.github/actions/act-setup-rust/: action.yaml
.github/actions/create-release/: action.yaml
.github/actions/release/: action.yaml  action.yml
.github/actions/upload-release-assets/: action.yaml
.github/gh-sync/: config.yaml  schema.json
.github/graft/: config.yaml
.github/infra/: File.yaml  FileSet.1.yaml  FileSet.yaml  Repository.yaml  RepositorySet.yaml
.github/infra/templates/: File.yaml
.github/rulesets/: default_branch.json  tags.json
.github/workflows/: _orchestrator.yaml  actionlint.yaml  audit.yaml  ci.yaml  ci.yml  cleanup.yaml  codeql.yaml  docs-ci.yaml  miri.yaml  pr-labeler.yaml  pr-labeler.yml  prebuild-container.yaml  release-build.yaml  release-manager.yaml  release.yaml  rust-ci.yaml  rust.yml  tagpr.yaml
.mise/: overrides.toml  tasks.toml
ast-rules/: _rules.md  avoid-nested-matches.yml  error-context-required.yml  module-size-limit.yml  no-blocking-in-async.yml  no-file-level-external-use.yml  no-get-prefix.yml  no-hardcoded-credentials.yml  no-ignored-result.yml  no-println-debug.yml  no-type-result-override.yml  no-unwrap-in-production.yml  no-use-alias.yml  no-wildcard-import.yml  optimize-string-concat.yml  prefer-iterator-over-loop.yml  prefer-nested-result.yml  prefer-vec-with-capacity.yml  require-pub-doc-comment.yml  secure-random-required.yml  unsafe-needs-safety-comment.yml
crates/brust/: Cargo.toml
crates/brust-web/: Cargo.toml  build.rs  package.json  pnpm-workspace.yaml
crates/brust-web/src/: assets.rs  cli.rs  lib.rs  main.rs  trace.rs
crates/brust-web/src/routes/: health.rs  index.rs  mod.rs
crates/brust-web/src/styles/: app.css
crates/brust-web/src/telemetry/: metrics.rs  mod.rs
crates/brust-web/templates/components/: welcome_card.html
crates/brust-web/templates/pages/: index.html
crates/brust-web/templates/shells/: minimal.html
crates/brust-web/tests/: integration_test.rs  telemetry_integration.rs
crates/brust/src/: main.rs  metrics.rs
crates/brust/src/libs/: count.rs  http.rs
crates/brust/src/metrics/: process.rs
crates/brust/src/telemetry/: mod.rs
crates/brust/src/telemetry/metrics/: mod.rs  process.rs
crates/brust/tests/: integration_test.rs
docs/: project_rules.md
docs/adr/latest/: 0001-adopt-grapesjs-for-wireframe-builder.md  0002-separate-canvas-css-from-production-build.md  0003-adopt-pnpm-workspace-for-monorepo.md
docs/specs/architecture/: otel-instrumentation.md
docs/specs/components/: brust-web.md  release-manager.md
src/: main.rs
src/libs/: hello.rs
tests/: integration_test.rs
tools/wireframe/: README.md  index.html  package.json
tools/wireframe/blocks/: daisy-blocks.js
