[package]
name = "brust"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1 #		開発時のコンパイル速度向上

[profile.release]
strip = "symbols"
debug = 1 #			リリースビルドでもスタックトレース可能に

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.137"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "=2.0.17"
predicates = "=3.1.3"
tracing-mock = "=0.1.0-beta.1"
