[package]
name = "brust"
version = "0.1.0"
categories = ["command-line-utilities"]
edition = "2024"
keywords = ["cli", "tool"]
license = "AGPL3.0"
repository = "https://github.com/naa0yama/boilerplate-rust"
description = "A CLI tool built following project rules standards"

[profile.dev]
opt-level = 1 #		開発時のコンパイル速度向上

[profile.release]
strip = "symbols"
debug = 1 #			リリースビルドでもスタックトレース可能に

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.137"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "=2.0.17"
predicates = "=3.1.3"
tracing-mock = "=0.1.0-beta.1"

[lints.clippy]
# project_rules.md に基づくlint設定（priority=-1で個別設定を優先）
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# 例外設定（プロジェクトの性質上許可するもの）
multiple-crate-versions = "allow"
cargo-common-metadata = "allow"

[lints.rust]
warnings = "deny"
